--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -3,3 +3,6 @@ _riverway_cms:
 
 _liip_imagine:
     resource: "@LiipImagineBundle/Resources/config/routing.yaml"
+
+fos_js_routing:
+    resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"
