--- a/src/CoreBundle/Resources/config/doctrine/Category.orm.yml
+++ b/src/CoreBundle/Resources/config/doctrine/Category.orm.yml
@@ -56,4 +56,12 @@ Riverway\Cms\CoreBundle\Entity\Category:
                 parent_id:
                     referencedColumnName: id
             orphanRemoval: false
+        menu:
+            targetEntity: MenuNode
+            fetch: LAZY
+            mappedBy: category
+            joinColumns:
+                name: category_id
+                referencedColumnName: id
+
     lifecycleCallbacks: {  }
