--- a/src/CoreBundle/Resources/config/doctrine/Category.orm.yml
+++ b/src/CoreBundle/Resources/config/doctrine/Category.orm.yml
@@ -63,5 +63,12 @@ Riverway\Cms\CoreBundle\Entity\Category:
             joinColumns:
                 name: category_id
                 referencedColumnName: id
+        articles:
+            targetEntity: Article
+            fetch: LAZY
+            mappedBy: category
+            joinColumns:
+                name: category_is
+                referencedColumnName: id
 
     lifecycleCallbacks: {  }
