--- a/src/CoreBundle/Resources/config/doctrine/Category.orm.yml
+++ b/src/CoreBundle/Resources/config/doctrine/Category.orm.yml
@@ -68,7 +68,7 @@ Riverway\Cms\CoreBundle\Entity\Category:
             fetch: LAZY
             mappedBy: category
             joinColumns:
-                name: category_is
+                name: category_id
                 referencedColumnName: id
 
     lifecycleCallbacks: {  }
