remove migrations, add creator schema

--- a/src/CoreBundle/Resources/config/doctrine/Article.orm.yml
+++ b/src/CoreBundle/Resources/config/doctrine/Article.orm.yml
@@ -70,6 +70,9 @@ Riverway\Cms\CoreBundle\Entity\Article:
             nullable: false
             options:
                 unsigned: false
+        creator:
+            type: string
+            nullable: true
     manyToOne:
         category:
             targetEntity: Category
