--- a/composer.json
+++ b/composer.json
@@ -21,12 +21,6 @@
             "vendor/symfony/symfony/src/Symfony/Component/VarDumper/Resources/functions/dump.php"
         ]
     },
-    "repositories":[
-        {
-            "type": "git",
-            "url" : "https://github.com/riverwaysoft/riverway-grid-bundle.git"
-        }
-    ],
     "require": {
         "php": ">=5.5.9",
         "doctrine/annotations": "^1.3",
@@ -46,6 +40,7 @@
         "liip/imagine-bundle": "^1.8",
         "myclabs/php-enum": "^1.5",
         "riverway/grid-bundle": "^0.2",
+        "riverwaysoft/grid-bundle": "^0.3",
         "sainsburys/guzzle-oauth2-plugin": "^3.0",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
