--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,7 @@
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.3.10",
-        "symfony/symfony": "3.3.9",
+        "symfony/symfony": "^3.3.8",
         "tetranz/select2entity-bundle": "2.*",
         "twig/extensions": "^1.5",
         "twig/twig": "^1.0||^2.0",
