--- a/composer.json
+++ b/composer.json
@@ -44,9 +44,10 @@
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
         "sentry/sentry-symfony": "^0.8.6",
+        "swiftmailer/swiftmailer": "^6.0",
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
-        "symfony/swiftmailer-bundle": "^2.3.10",
+        "symfony/swiftmailer-bundle": "^3.0",
         "symfony/symfony": "^3.3.8",
         "tetranz/select2entity-bundle": "2.*",
         "twig/extensions": "^1.5",
