article with tag delete fixed

--- a/src/CoreBundle/Resources/config/doctrine/Article.orm.yml
+++ b/src/CoreBundle/Resources/config/doctrine/Article.orm.yml
@@ -103,7 +103,7 @@ Riverway\Cms\CoreBundle\Entity\Article:
     manyToMany:
         tags:
             targetEntity: Riverway\Cms\CoreBundle\Entity\Tag
-            cascade: [persist,remove]
+            cascade: [persist]
             fetch: LAZY
             mappedBy: null
             inversedBy: article
