article menu displaying

--- a/src/CoreBundle/Resources/config/doctrine/Category.orm.yml
+++ b/src/CoreBundle/Resources/config/doctrine/Category.orm.yml
@@ -59,6 +59,7 @@ Riverway\Cms\CoreBundle\Entity\Category:
             joinColumns:
                 name: category_id
                 referencedColumnName: id
+            orphanRemoval: true
         articles:
             targetEntity: Article
             fetch: LAZY
