--- a/src/CoreBundle/Resources/config/doctrine/Article.orm.yml
+++ b/src/CoreBundle/Resources/config/doctrine/Article.orm.yml
@@ -100,6 +100,14 @@ Riverway\Cms\CoreBundle\Entity\Article:
             mappedBy: article
             orderBy:
                 sequence: ASC
+        menu:
+            targetEntity: Riverway\Cms\CoreBundle\Entity\MenuNode
+            fetch: LAZY
+            mappedBy: article
+            joinColumns:
+                name: article_id
+                referencedColumnName: id
+            orphanRemoval: true
     manyToMany:
         tags:
             targetEntity: Riverway\Cms\CoreBundle\Entity\Tag
