--- a/src/CoreBundle/Resources/config/doctrine/SlideElementParameters.orm.yml
+++ b/src/CoreBundle/Resources/config/doctrine/SlideElementParameters.orm.yml
@@ -12,7 +12,7 @@ Riverway\Cms\CoreBundle\Entity\SlideElementParameters:
         text:
             type: string
             length: 255
-            nullable: false
+            nullable: true
         textColor:
             type: string
             length: 255
