--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -75,3 +75,9 @@ swiftmailer:
     username: '%mailer_user%'
     password: '%mailer_password%'
     spool: { type: memory }
+
+doctrine_migrations:
+    dir_name: "%kernel.root_dir%/../src/CoreBundle/DoctrineMigrations"
+    namespace: Riverway\Cms\CoreBundle\DoctrineMigrations
+    table_name: riverway_cms_migration_versions
+    name: Riverway Cms Migrations
