--- a/src/CoreBundle/Resources/config/migration.yml
+++ b/src/CoreBundle/Resources/config/migration.yml
@@ -1,4 +1,4 @@
 migrations_directory: "../../DoctrineMigrations"
-migrations_namespace: Riverway\Cms\CoreBundle\Migrations
+migrations_namespace: Riverway\Cms\CoreBundle\DoctrineMigrations
 table_name: riverway_cms_migration_versions
 name: Riverway Cms Migrations
