--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   },
   "dependencies": {
     "bootstrap": "4.0.0-beta",
+    "codemirror": "^5.31.0",
     "dragula": "^3.7.2",
     "fontawesome-iconpicker": "^1.3.0",
-    "jquery": "^2",
+    "jquery": "^3.2.1",
     "popper.js": "^1.12.5",
     "select2": "^4.0.3",
+    "summernote": "0.8.8",
+    "summernote-bootstrap4": "v0.8.2",
     "underscore": "^1.8.3"
   }
 }
