--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "riverway-cms-core",
+  "version": "1.0.2",
   "scripts": {
     "dev-server": "encore dev-server",
     "prod": "encore production",
@@ -22,5 +24,6 @@
     "summernote": "0.8.8",
     "summernote-bootstrap4": "v0.8.2",
     "underscore": "^1.8.3"
-  }
+  },
+  "author": "Sorokin Viktor"
 }
