--- a/src/CoreBundle/Resources/config/services.yml
+++ b/src/CoreBundle/Resources/config/services.yml
@@ -21,7 +21,7 @@ services:
         tags: ['controller.service_arguments']
 
     Riverway\Cms\CoreBundle\Widget\Realisation\EditorWidget:
-        arguments: ['@form.factory']
+        arguments: []
         tags:
           - { name: 'riverway.cms.widget' }
 
