--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     },
     "require": {
         "php": ">=5.5.9",
+        "beyerz/open-graph-protocol-bundle": "^2.0",
         "doctrine/annotations": "^1.3",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/doctrine-fixtures-bundle": "^2.3",
