--- a/src/CoreBundle/Resources/config/doctrine/Article.orm.yml
+++ b/src/CoreBundle/Resources/config/doctrine/Article.orm.yml
@@ -75,19 +75,19 @@ Riverway\Cms\CoreBundle\Entity\Article:
             nullable: true
         metaDescription:
             type: string
-            nullable: false
+            nullable: true
             length: 255
             options:
                 fixed: false
         metaKeywords:
             type: string
-            nullable: false
+            nullable: true
             length: 255
             options:
                 fixed: false
         metaReferrer:
             type: string
-            nullable: false
+            nullable: true
             length: 255
             options:
                 fixed: false
