add article permalink

--- a/src/CoreBundle/Resources/config/doctrine/Article.orm.yml
+++ b/src/CoreBundle/Resources/config/doctrine/Article.orm.yml
@@ -153,4 +153,4 @@ Riverway\Cms\CoreBundle\Entity\Article:
             orderBy: null
     lifecycleCallbacks:
         prePersist: [updatedTimestamps,createUri]
-        preUpdate: [updatedTimestamps]
+        preUpdate: [updatedTimestamps, updateUri]
