--- a/src/CoreBundle/Resources/config/doctrine/Slide.orm.yml
+++ b/src/CoreBundle/Resources/config/doctrine/Slide.orm.yml
@@ -28,8 +28,8 @@ Riverway\Cms\CoreBundle\Entity\Slide:
         textAlign:
             type: string
             nullable: false
-        verticalAlign:
-            type: string
+        marginTop:
+            type: integer
             nullable: false
         width:
             type: integer
