--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -19,4 +19,4 @@ parameters:
     secret: ThisTokenIsNotSoSecretChangeIt
     assets.json_manifest_path: '%kernel.project_dir%/web/build/manifest.json'
 
-    google_geocode_api_key: ''
+    riverway_cms.google_geocode_api_key: ''
