--- a/src/CoreBundle/Resources/config/services.yml
+++ b/src/CoreBundle/Resources/config/services.yml
@@ -71,5 +71,5 @@ services:
     Riverway\Cms\CoreBundle\Service\CrimeMap\CrimeMapManager:
         public: true
         arguments:
-            $google_geocode_api_key: '%google_geocode_api_key%'
+            $google_geocode_api_key: '%riverway_cms.google_geocode_api_key%'
             $logger: '@monolog.logger'
