--- a/src/CoreBundle/Resources/config/services.yml
+++ b/src/CoreBundle/Resources/config/services.yml
@@ -70,6 +70,4 @@ services:
 
     Riverway\Cms\CoreBundle\Service\CrimeMap\CrimeMapManager:
         public: true
-        arguments:
-            $google_geocode_api_key: '%riverway_cms.google_geocode_api_key%'
-            $logger: '@monolog.logger'
+        arguments: ['', '@monolog.logger']
