--- a/composer.json
+++ b/composer.json
@@ -48,8 +48,9 @@
         "swiftmailer/swiftmailer": "^6.0",
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
+        "symfony/polyfill-php70": "v1.6.0",
         "symfony/swiftmailer-bundle": "^3.0",
-        "symfony/symfony": "^3.3.8",
+        "symfony/symfony": "^3.4.0-rc2",
         "tetranz/select2entity-bundle": "2.*",
         "twig/extensions": "^1.5",
         "twig/twig": "^1.0||^2.0",
