--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "php": ">=5.5.9",
         "beyerz/open-graph-protocol-bundle": "^2.0",
         "doctrine/annotations": "^1.3",
+        "doctrine/dbal": "2.6.3",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/doctrine-fixtures-bundle": "^2.3",
         "doctrine/doctrine-migrations-bundle": "^1.2",
